✨ Update for Amila

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
-url: https://github.com/jeromelachaud/freelancer-theme
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+title: Amila Gacrux
+email: risacan.net@gmail.com
+url: https://amilagacrux.com
+description: "Amila Gacrux is a character from Sinsei Galverse. Her manager is Risa (Twitter@risacan_eth)"
+keywords: "galverse, vtuber"
+skills: "Vtuber"
+meta_author: Risa Harada
 
 # Google webmaster tools
 google_verify:
@@ -40,15 +40,7 @@ footer:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
-  - title: github
-    url: http://github.com/jekyll
+    url: http://twitter.com/risacan_eth
 
 # Postal address (add as many lines as necessary)
 address:
